<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_activity_main">心电监护</string>
    <string name="ecg_device">心电仪 MAC 地址</string>
    <string name="ecg_list">已接收到文件列表</string>
    <string name="ecg_current">当前文件传输进度</string>
    <string name="ecg_total">文件传输总进度</string>
    <string name="ecg_choose">请选择</string>
    <string name="ecg_view">查看心电数据</string>
    <string name="ecg_delete">删除当前数据</string>
    <string name="ecg_clear">清空所有数据</string>
    <string name="ecg_upload">上传此数据</string>
    <string name="ecg_uploadall">上传所有数据</string>
    <string name="bp_device">血压仪 MAC 地址</string>
    <string name="bp_sbp">收缩压（高压）</string>
    <string name="bp_dbp">舒张压（低压）</string>
    <string name="bp_pr">脉率</string>
    <string name="app_name">健康监测系统</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">正在搜索设备。。。</string>
    <string name="select_device">选择一个设备配对</string>
    <string name="none_paired">没有配对的设备</string>
    <string name="none_found">没有发现设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">没有其他蓝牙设备</string>
    <string name="button_scan">搜寻设备</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="this_result">血压</string>
    <string name="this_recent_result">最近记录</string>
    <string name="highValue">舒张压值：</string>
    <string name="lowValue">收缩压值：</string>
    <string name="PulseValue">脉搏：</string>
    <string name="PRbpm">PRbpm：</string>
    <string name="Spo2">Spo2%：</string>
    <string name="bar">棒图：</string>
    <string name="phonenum">紧急联系电话号码</string>
    <string name="title_activity_etcomm">Etcomm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_xue_tang">XueTangActivity</string>

    <!-- 个人信息 -->
    <string name="login_id">登录名</string>
    <string name="rel_name">真实姓名</string>
    <string name="sex">性别 </string>
    <string name="age">年龄</string>
    <string name="address">家庭住址</string>
    <string name="sick_history">病史 </string>
    <string name="idcard">身份证号</string>
    <string name="hard_id">设备id</string>
    <string name="opone_number">手机号</string>
    <string name="passwords">密码 </string>
    <string name="affirm_passwords">确认密码</string>
    <string name="register">注册</string>

</resources>